--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
      <Compile Include="Assets\AllStarCharacterLibrary\Scripts\wall.cs" />
      <Compile Include="Assets\AudioManager.cs" />
      <Compile Include="Assets\cameramov.cs" />
+     <Compile Include="Assets\Gamemanager.cs" />
      <Compile Include="Assets\handHit.cs" />
      <Compile Include="Assets\powerUp.cs" />
      <Compile Include="Assets\Sound.cs" />
